updated LocalDate validation, added tests, added Exception